Fixed alignment and edited navbar forms

--- a/server/CustomerServiceAnalyzer/static/Shield/assets/css/main.css
+++ b/server/CustomerServiceAnalyzer/static/Shield/assets/css/main.css
@@ -636,7 +636,7 @@ a:after {
 }
 /* top bar trasparent*/
 .navbar-wrapper {
-    background: rgba(0,0,0,0.65);
+    background: rgba(0,0,0,0.65) !important;
 }
 
 /* top bar texts changes color when you hover over it*/
